solve the 10px gap via @gap/2

--- a/style.less
+++ b/style.less
@@ -12,7 +12,7 @@
       url('fonts/applew3.svg') format('svg');
   font-weight: normal;
   font-style: normal;
-}
+} 
 .width(@num){
 	width: @num*1%;
 }
@@ -41,7 +41,7 @@ body{
 .col1-2{
   float: left;
   width: 50%;
-  padding-right: @gap;
+  padding-right: @gap/2;
 }
 .col1-4{
   float: left;
